--- a/games/templates/games/game_list.html
+++ b/games/templates/games/game_list.html
@@ -1,4 +1,10 @@
 {% extends 'base.html' %}
 
 {% block content %}
+<h1>Список игр!</h1>
+<ul>
+    <li>Metro Exodus</li>
+    <li>Half-Life 2</li>
+    <li>Zenless Zone Zero</li>
+</ul>
 {% endblock %}
